# acw_ble_getway_190

./: CMakeLists.txt  prj.conf
src/: ble.c  main.c
src/lib/: common.c  common.h
